vlib/v/parser/tests/generic_symbol_err.vv
pub fn what1<A>(params ...A) {
   println(params)
}

fn main() {}
